--- a/views/templates/index.html
+++ b/views/templates/index.html
@@ -22,7 +22,7 @@
                     <td>{{produto.nome}}</td>
                     <td>{{produto.quantidade}}</td>
                     <td>{{produto.categoria}}</td>
-                    <td><a href="">Editar</a></td>
+                    <td><a href="{{ url_for('editar_produto', id=produto.id) }}">Editar</a></td>
                     <td><a href="{{ url_for('remover_produto', id=produto.id)}}" onClick="return confirm('Tem certeza que deseja deletar esse registro?')">Excluir</a></td>
                 </tr>
                 {% endfor %}
